<resources>
    <string name="app_name">ReMeMo</string>
    <string name="TV_ReMeMo">ReMeMo</string>
    <string name="cD_iB_goToPlayChoice"> Go to the games</string>
    <string name="tV_placeholder" />
    <string name="cD_iB_goToHighscore">go to highscore</string>
    <string name="cD_iB_goToSettings">go to settings</string>
    <string name="tv_headlingGameChoice">Games</string>
    <string name="bt_Memory">ReMeMo says</string>
    <string name="bt_Reaction">Catch \'em All</string>
    <string name="bt_Motivity">Coming soon</string>
    <string name="tV_headline_highscore_games">Highscore</string>
    <string name="tV_highscore_games_infoTxt">Choose one of the buttons below to see your progress in this game</string>
    <string name="tV_headline_settings">Settings</string>
    <string name="tV_volume">Volume</string>
    <string name="bt_volume_down">-</string>
    <string name="bt_volume_up">+</string>
    <string name="tV_language">Language</string>
    <string name="bt_reset">Reset</string>
    <string name="bt_credits">Credits</string>
    <string name="bt_support">Support</string>
    <string name="tV_memory_game">ReMeMo says</string>
    <string name="bt_lv1" >Level 1</string>
    <string name="bt_lv2">Level 2</string>
    <string name="bt_lv3">Level 3</string>
    <string name="bt_lv4">Level 4</string>
    <string name="bt_lv5">Level 5</string>
    <string name="tV_motivity_game">Motivity</string>
    <string name="tV_reaction_game">Catch \'em All</string>
    <string name="cD_IV_settings_volume">Volume</string>
    <string name="cD_iB_settings_GermanyFlag">Flag Of Germany</string>
    <string name="cD_iB_settings_FlagOfGreatBritain">Flag Of Great Britain</string>
    <string name="tV_howToPlay_headline">How To Play</string>
    <string name="tV_howToPlay_reaction">Catch \'em All</string>
    <string name="tV_howToPlay_Reaction_Instruction">You will see flies on the screen. Tap on them. On the top left corner, you see
        how much flies you have to tap to. Be careful:They will disappear and you also have a time limit.</string>
    <string name="tV_howToPlay_motivity">Motivity</string>
    <string name="tV_howToPlay_Motivity_Instruction">solve the calculuses</string>
    <string name="tV_howToPlay_Memory">ReMeMo says</string>
    <string name="tV_howToPlay_Memory_Instruction">At the bottom of the screen, you will see a code. Remember this code.
    The code disappears after few seconds. Afterwards you should enter the code by using the buttons with the numbers on it.</string>
    <string name="tV_support_headline">Contact Us!</string>
    <string name="bT_mail_markus">Markus</string>
    <string name="bt_mail_vanessa">Vanessa</string>
    <string name="bT_mail_lukas">Lukas</string>
    <string name="tV_credits_headline">Credits</string>
    <string name="tV_credits_markus">Almer Markus</string>
    <string name="tV_credits_vanessa">Riedl Vanessa</string>
    <string name="tV_credits_lukas">Riegler Lukas</string>
    <string name="tV_credits_CR">© 2021 | FH Joanneum | IMA</string>
    <string name="cD_iB_goToPauseScreen">visit pause screen</string>
    <string name="tv_headline_pause">Pause</string>
    <string name="cD_iB_Restart">restart the level</string>
    <string name="cD_iB_goToHowToPlayMemory">instruction ReMeMo says</string>
    <string name="cD_iB_goToHowToPlayMotivity">visit the instruction of How To Play Motivity</string>
    <string name="cD_IB_goToHowToPlayReaction">instruction Catch \'em All</string>
    <string name="cD_iB_resumeToGame">go back to the game</string>
    <string name="cD_iB_goBackToTheLevels">go back to the levels</string>
    <string name="cD_iB_pauseScreen_goToSettings">go to the settings</string>
    <string name="bt_memory_1">1</string>
    <string name="bt_memory_2">2</string>
    <string name="bt_memory_3">3</string>
    <string name="bt_memory_4">4</string>
    <string name="tV_memory_lv1_nextNumber">%1$d</string>
    <string name="memory_its_your_turn">Now it is your turn!</string>
    <string name="bt_memory_5">5</string>
    <string name="bt_memory_6">6</string>
    <string name="bt_memory_7">7</string>
    <string name="bt_memory_8">8</string>
    <string name="bt_memory_9">9</string>
    <string name="bt_memory_10">10</string>
    <string name="iV_fliege">This is a fly</string>
    <string name="tV_catched_Flys">catched Flys</string>
    <string name="tV_flies_left">Flies left</string>
    <string name="tV_time_left">Time Left</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="allLevelsPassedMessage">Great, you have passed all leveles. Good job!!</string>
    <string name="activityNotFound">Upps, something went wrong! Pls restart the game. If the error still occurs, contact our team!</string>
    <string name="TitleALFinished">Good job mate!</string>
    <string name="MessageRememberALFinished">You are the king of ReMeMo says</string>
    <string name="playLevelsAgain">Play again</string>
    <string name="levelPassed">Great, you have nailed this level.</string>
    <string name="goBack">Game Choice</string>
    <string name="levelFaild">Ouch, you missed it.</string>
    <string name="retry">Retry</string>
    <string name="restartLvlTitle">Restart Level</string>
    <string name="restartLvlMessage">Do you really want to start over?</string>
    <string name="welcome">Hi again</string>

</resources>