<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/reaction_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/iB_HighscoreLink_lvls_reaction"
                android:layout_width="15dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#5A606A"
                android:contentDescription="@string/cD_iB_goToHighscore"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/tV_Placeholder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tV_placeholder" />

            <ImageButton
                android:id="@+id/iB_HowToPlayReaction"
                android:layout_width="15dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="#5A606A"
                android:contentDescription="@string/cD_IB_goToHowToPlayReaction"
                app:srcCompat="@android:drawable/ic_dialog_info" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_reaction_game"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/tV_reaction_game"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/bt_reaction_lv1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bt_lv1" />

        <Button
            android:id="@+id/bt_reaction_lv2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bt_lv2" />

        <Button
            android:id="@+id/bt_reaction_lv3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bt_lv3" />

        <Button
            android:id="@+id/bt_reaction_lv4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bt_lv4" />

        <Button
            android:id="@+id/bt_reaction_lv5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bt_lv5" />

    </LinearLayout>
</ScrollView>