<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnumbers"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/iB_pauseScreen"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:background="@drawable/roundedcornertopright"
        android:contentDescription="@string/cD_iB_goToPauseScreen"
        app:srcCompat="@drawable/pause" />

    <TextView
        android:id="@+id/tV_memory_Lvl_1"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/texfieldbackground"
        android:fontFamily="@font/fontdiner_swanky"
        android:gravity="center"
        android:text="@string/bt_lv1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt_memory_lv1_1_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="#403F3F"
        android:text="@string/bt_memory_1" />

    <Button
        android:id="@+id/bt_memory_lv1_1_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="#403F3F"
        android:text="@string/bt_memory_2" />

    <Button
        android:id="@+id/bt_memory_lv1_1_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="#403F3F"
        android:text="@string/bt_memory_3" />

    <Button
        android:id="@+id/bt_memory_lv1_1_4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="#403F3F"
        android:text="@string/bt_memory_4" />

    <TextView
        android:id="@+id/tV_memory_lv1_Numbers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/texfieldbackground"
        android:fontFamily="@font/germania_one"
        android:gravity="center"
        android:text="@string/tV_memory_lv1_nextNumber"
        android:textSize="25sp" />

</LinearLayout>